--- a/app/src/main/res/layout/activity_add_location.xml
+++ b/app/src/main/res/layout/activity_add_location.xml
@@ -58,7 +58,8 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/add_location_longitude"
-        android:backgroundTint="@color/dark"/>
+        android:backgroundTint="@color/dark"
+        android:textColor="@color/white"/>
 
     <Button
         android:id="@+id/add_location_button_select"
@@ -68,7 +69,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toTopOf="@id/add_location_button_add"
         android:text="Určit současnou polohu (GPS)"
-        android:backgroundTint="@color/dark" />
+        android:backgroundTint="@color/dark"
+        android:textColor="@color/white"/>
 
     <Button
         android:id="@+id/add_location_button_add"
@@ -79,5 +81,6 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        android:backgroundTint="@color/dark"/>
+        android:backgroundTint="@color/dark"
+        android:textColor="@color/white"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
