The great DP purge

--- a/app/src/main/res/layout/fragment_stats_alert_hive.xml
+++ b/app/src/main/res/layout/fragment_stats_alert_hive.xml
@@ -17,7 +17,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Celkový počet:"
-            android:textSize="16dp"
+            android:textSize="16sp"
             android:textColor="@color/black"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -28,7 +28,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Počet"
-            android:textSize="16dp"
+            android:textSize="16sp"
             android:layout_marginStart="8dp"
             android:textColor="@color/black"
             app:layout_constraintStart_toEndOf="@id/stats_alert_hive_total_text"
@@ -40,7 +40,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Počet vyřešených:"
-            android:textSize="16dp"
+            android:textSize="16sp"
             android:layout_marginTop="16dp"
             android:textColor="@color/black"
             app:layout_constraintStart_toStartOf="parent"
@@ -52,7 +52,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Počet"
-            android:textSize="16dp"
+            android:textSize="16sp"
             android:layout_marginStart="8dp"
             android:textColor="@color/black"
             app:layout_constraintStart_toEndOf="@id/stats_alert_hive_solved_text"
@@ -64,7 +64,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Počet upozornění\ns vysokou závažností\n(vyřešených):"
-            android:textSize="16dp"
+            android:textSize="16sp"
             android:layout_marginTop="16dp"
             android:textColor="@color/black"
             app:layout_constraintStart_toStartOf="parent"
@@ -76,7 +76,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Počet (vyřešených)"
-            android:textSize="16dp"
+            android:textSize="16sp"
             android:layout_marginStart="8dp"
             android:textColor="@color/black"
             app:layout_constraintStart_toEndOf="@id/stats_alert_hive_high_text"
@@ -88,7 +88,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Počet upozornění\nse střední závažností\n(vyřešených):"
-            android:textSize="16dp"
+            android:textSize="16sp"
             android:layout_marginTop="16dp"
             android:textColor="@color/black"
             app:layout_constraintStart_toStartOf="parent"
@@ -100,7 +100,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Počet (vyřešených)"
-            android:textSize="16dp"
+            android:textSize="16sp"
             android:layout_marginStart="8dp"
             android:textColor="@color/black"
             app:layout_constraintStart_toEndOf="@id/stats_alert_hive_medium_text"
@@ -112,7 +112,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Počet upozornění\ns nízkou závažností\n(vyřešených):"
-            android:textSize="16dp"
+            android:textSize="16sp"
             android:layout_marginTop="16dp"
             android:textColor="@color/black"
             app:layout_constraintStart_toStartOf="parent"
