--- a/app/src/main/res/layout/fragment_info.xml
+++ b/app/src/main/res/layout/fragment_info.xml
@@ -15,7 +15,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Řada"
-            android:textSize="16dp"
+            android:textSize="16sp"
             android:layout_marginStart="8dp"
             android:textColor="@color/black"
             app:layout_constraintStart_toStartOf="parent"
@@ -29,7 +29,7 @@
             android:layout_height="wrap_content"
             android:text="Číslo řady"
             android:layout_marginTop="16dp"
-            android:textSize="16dp"
+            android:textSize="16sp"
             android:layout_marginEnd="8dp"
             android:textColor="@color/black"
             app:layout_constraintTop_toTopOf="parent"
