--- a/app/src/main/res/layout/fragment_stats_harvest_hive.xml
+++ b/app/src/main/res/layout/fragment_stats_harvest_hive.xml
@@ -16,7 +16,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Celkové množství:"
-            android:textSize="16dp"
+            android:textSize="16sp"
             android:textColor="@color/black"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -27,7 +27,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Počet"
-            android:textSize="16dp"
+            android:textSize="16sp"
             android:layout_marginStart="8dp"
             android:textColor="@color/black"
             app:layout_constraintStart_toEndOf="@id/stats_harvest_hive_total_text"
@@ -39,7 +39,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Průměrný obsah vody:"
-            android:textSize="16dp"
+            android:textSize="16sp"
             android:textColor="@color/black"
             android:layout_marginTop="16dp"
             app:layout_constraintTop_toBottomOf="@+id/stats_harvest_hive_total_text"
@@ -51,7 +51,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Průměr"
-            android:textSize="16dp"
+            android:textSize="16sp"
             android:layout_marginStart="8dp"
             android:textColor="@color/black"
             app:layout_constraintStart_toEndOf="@id/stats_harvest_hive_water_text"
@@ -63,7 +63,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Množství vytočeného medu [kg]"
-            android:textSize="16dp"
+            android:textSize="16sp"
             android:textColor="@color/black"
             android:layout_marginTop="16dp"
             app:layout_constraintStart_toStartOf="parent"
@@ -82,7 +82,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Průměrný obsah vody [%]"
-            android:textSize="16dp"
+            android:textSize="16sp"
             android:textColor="@color/black"
             android:layout_marginTop="16dp"
             app:layout_constraintStart_toStartOf="parent"
