--- a/app/src/main/res/layout/fragment_stats_record.xml
+++ b/app/src/main/res/layout/fragment_stats_record.xml
@@ -16,7 +16,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Celkový počet:"
-            android:textSize="16dp"
+            android:textSize="16sp"
             android:textColor="@color/black"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -28,7 +28,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Počet"
-            android:textSize="16dp"
+            android:textSize="16sp"
             android:layout_marginStart="8dp"
             android:textColor="@color/black"
             app:layout_constraintStart_toEndOf="@id/stats_record_total_text"
@@ -40,7 +40,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Počet návštěvních dní:"
-            android:textSize="16dp"
+            android:textSize="16sp"
             android:textColor="@color/black"
             android:layout_marginTop="16dp"
             app:layout_constraintStart_toStartOf="parent"
@@ -53,7 +53,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Počet"
-            android:textSize="16dp"
+            android:textSize="16sp"
             android:layout_marginStart="8dp"
             android:textColor="@color/black"
             app:layout_constraintStart_toEndOf="@id/stats_record_unique_text"
@@ -65,7 +65,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Výpis krmení:"
-            android:textSize="16dp"
+            android:textSize="16sp"
             android:textColor="@color/black"
             android:layout_marginTop="16dp"
             app:layout_constraintStart_toStartOf="parent"
